--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,15 +1,17 @@
 <div class="caja">
 
     <div class="caja-uno centrado mt ">
-        <h3>WELCOME</h3>
+        <h1>WELCOME</h1>
         <!-- NOMBRE DEL USUARIO DESDE EL FORM -->
-        <p>Monstro</p>
+        <h2>monstro</h2>
         <!--ADENTRO DEL SPAN UNA CLASE ,ID ,ALGO PARA PODER RELLENAR CON EL PUNTAJE,INICIALMENTE ES ------------- -->
         <p>PUNTAJE ALCANZADO : <span>0.0</span> </p>
     </div>
 
-    <div class="caja-dos">
-        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Nueva partida</a>
-        <button class="mt boton"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ver Ranking</a></button>
+    <div class="caja-dos centrado ">
+        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton">Nueva partida</a>
+
+        <button class="ranking"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">
+                Ranking</a></button>
     </div>
 </div>
