--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -8,7 +8,7 @@
         {{/partida}}
     </div>
     
-    <div class="caja_partidas">
+    <div class="caja-pt-previas">
         <h1>Partidas previas</h1>
         {{#pregunta}}
         <span>Usuario: {{user_name}}</span>
