imagenes de categorias

--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -2,6 +2,8 @@
 
 <div class="caja_pregunta">
     {{#pregunta}}
+    <img src="{{tipo}}" width="100"  alt="">
+    <h1>{{tipo}}</h1>
     <h1>{{descripcion}}</h1>
     {{/pregunta}}
 </div>
