Gifs de categoria funcionando

--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -2,8 +2,9 @@
 
 <div class="caja_pregunta">
     {{#pregunta}}
-    <img src="{{tipo}}" width="100"  alt="">
+    
     <h1>{{tipo}}</h1>
+    <img src="{{imagen}}" width="200"  alt="">
     <h1>{{descripcion}}</h1>
     {{/pregunta}}
 </div>
