--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -4,6 +4,7 @@
     {{#pregunta}}
     
     <h1>{{tipo}}</h1>
+    <h2>⏳ Tiempo: </h2>
     <img src="{{imagen}}" width="200"  alt="">
     <h1>{{descripcion}}</h1>
     {{/pregunta}}
@@ -18,4 +19,10 @@
 </form>
 
 {{/respuesta}}
+</div>
+
+<div class="botonera">
+    <button>💣</button>
+    <button>💫</button>
+    <button>🃏</button>
 </div>
