Lobby muestra usuario

--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -5,7 +5,7 @@
     
     <h1>{{tipo}}</h1>
     <h2>⏳ Tiempo: </h2>
-    <img src="{{imagen}}" width="200"  alt="">
+    <img src="{{imagen}}" width="200" height="150" alt="">
     <h1>{{descripcion}}</h1>
     {{/pregunta}}
 </div>
