--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,11 +1,14 @@
 <div class="caja">
 
     <div class="caja-uno centrado mt ">
+        
         <h1>WELCOME</h1>
-        <!-- NOMBRE DEL USUARIO DESDE EL FORM -->
-        <h2>monstro</h2>
+        <!-- NOMBRE DEL USUARIO DESDE EL registro -->
+        
+            <h2>{{user}}</h2>
         <!--ADENTRO DEL SPAN UNA CLASE ,ID ,ALGO PARA PODER RELLENAR CON EL PUNTAJE,INICIALMENTE ES ------------- -->
         <p>PUNTAJE ALCANZADO : <span>0.0</span> </p>
+        
     </div>
 
     <div class="caja-dos centrado ">
