--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -1,17 +1,17 @@
 
 
-<div class="caja_pregunta">
+<div class="caja">
     {{#pregunta}}
     <h1>{{descripcion}}</h1>
     {{/pregunta}}
 </div>
 
-<div class="caja_opciones center mt">
+<div >
 {{#respuesta}}
 
-<form action="./index.php?controller=Partida&method=verificarRespuesta" method="post">
+<form action="./index.php?controller=Partida&method=verificarRespuesta" method="post" class="caja">
     
-    <button type="submit" name="id" value="{{id}}">{{descripcion}}</button>
+    <button type="submit" name="id" value="{{id}}" class="boton_respuesta">{{descripcion}}</button>
 </form>
 
 {{/respuesta}}
