--- a/public/styles.css
+++ b/public/styles.css
@@ -180,15 +180,24 @@ select {
 }
 
 .botonArchivo {
+    display: flex;
     background-color: #3498db;
     color: #fff;
-    padding: 10px 20px;
+    padding: 5%;
     border: none;
+    border-radius: 10px;
     cursor: pointer;
+    text-align: center;
+    margin: 5%;
+    flex-direction: column;
+    align-items: center;
+}
+ 
 }
 
 .botonArchivo input[type="file"] {
     display: none;
+    margin: 2%;
 
 }
 
