Color de categoria en card y boton registro

--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -27,7 +27,7 @@
                 </label>
             </div>
 
-            <input type="submit" value="Registrarse" class="boton" name="enviar">
+            <input type="submit" value="Registrarse" class="boton registro" name="enviar">
         </form>
     </div>
 
