perfil ahora muestra partidas previas del user actual

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -13,12 +13,12 @@
     
     <div class="caja-pt-previas">
         <h1>Partidas previas</h1>
-        {{#partida}}
+        {{#partidasPrevias}}
         <span>Usuario: {{user_name}}</span>
         <span> {{puntaje}}</span>
         <span>Fecha: {{fecha}}</span>
         
-        {{/partida}}
+        {{/partidasPrevias}}
     </div>
 
 </div>
