--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -19,6 +19,7 @@
         <span>Fecha: {{fecha}}</span>
         
         {{/partidasPrevias}}
+        <button class="mt boton"><a href="./index.php?controller=Lobby&method=mostrarPantallaLobby">VOLVER</a></button>
     </div>
 
 </div>
