--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -7,7 +7,7 @@
         
             <h2>{{user}}</h2>
         <!--ADENTRO DEL SPAN UNA CLASE ,ID ,ALGO PARA PODER RELLENAR CON EL PUNTAJE,INICIALMENTE ES ------------- -->
-        <p>PUNTAJE ALCANZADO : <span>0.0</span> </p>
+        <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
         
     </div>
 
