--- a/view/header.mustache
+++ b/view/header.mustache
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalia -- Home</title>
     <link rel="stylesheet" type="text/css" href="public/styles.css">
-    <link rel="icon" href="public/hornero.svg" type="image/x-icon">
+    <link rel="icon" href="public/hornerito-panz-lirt.svg" type="image/x-icon">
 </head>
 <body>
 
 <header class="header">
 
-    <a href="#"><img src="public/hornero.svg" class="logo"></a>
-    <h1 class="nombre">Animalia</h1>
+    <a href="#"><img src="public/hornerito-panz-lirt.svg" class="logo"></a>
+    <h1 class="nombre">Argentinazo: Hornero Editions</h1>
     <!-- ♠<svg></svg> -->
     <a href="#"><img src="public/user.svg" class="account"></a>
     
