--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -1,7 +1,8 @@
 <footer>
     <div>
-        <p >Animalia</p>
-        <img src="public/hornero.svg" alt="hornero">
+        <img src="public/hornerito-panz-lirt.svg" alt="hornero" 
+        class="logo">
+        <p >ARGENTINAZO</p>
         <p>Programacion Web II</p>
     </div>
     <div>
