--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,4 +1,4 @@
-<div class="bye centrado">
+<div class="caja bye centrado">
     <p class="m mt">¿Te vas pibe?</p>
     <a href="./index.php?controller=Lobby&method=cerrarSesion" class="boton m">cerrar sesión</a>
    
@@ -9,19 +9,10 @@
     <div class="caja-uno centrado mt ">
 
         <h1>WELCOME</h1>
-        <!-- NOMBRE DEL USUARIO DESDE EL registro -->
-
         <h2>{{user}}</h2>
-        <!--ADENTRO DEL SPAN UNA CLASE ,ID ,ALGO PARA PODER RELLENAR CON EL PUNTAJE,INICIALMENTE ES ------------- -->
-<<<<<<< HEAD
-
         <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
-        
 
-=======
-        <p>PUNTAJE ALCANZADO : <span>0.0</span> </p>
 
->>>>>>> 74da3e2ac94ed7c2110fc8dad15bd469eb761f71
     </div>
 
     <div class="caja-dos centrado ">
