--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -4,12 +4,13 @@
         <h1>Ranking</h1>
         <iframe src="https://giphy.com/embed/gxhU80is6fOKI" width="240" height="162" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         {{#partida}}
-        <form action="./index.php?controller=Perfil&method=mostrarPantallaPerfil" method="post">
-            <input type="hidden" name="user" value="{{user_name}}">
-            <button class="user_name" type="submit" name="enviar">👑 {{user_name}}</button>
-        </form>
-        <span> {{puntaje}}</span><br>
-        <!-- <a class="user_name" href="./index.php?controller=Perfil&method=mostrarPantallaPerfil"> 👑 {{user_name}} </a><span> {{puntaje}}</span><br> -->
+        <div class="row">
+            <form action="./index.php?controller=Perfil&method=mostrarPantallaPerfil" method="post">
+                <input type="hidden" name="user" value="{{user_name}}">
+                <button class="user_name" type="submit" name="enviar">👑 {{user_name}}</button>
+            </form>
+            <span> {{MAX(puntaje)}}</span><br>
+        </div>
         
         {{/partida}}
     
