--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,10 +1,11 @@
-<div class="caja bye centrado">
-    <p class="m mt">¿Te vas pibe?</p>
-    <a href="./index.php?controller=Lobby&method=cerrarSesion" class="boton m">cerrar sesión</a>
-   
+<div class ="contenedor_cerrar_sesion">
+    <div class="caja bye centrado">
+        <p class="m mt">¿Te vas pibe?</p>
+        <a href="./index.php?controller=Lobby&method=cerrarSesion" class="boton m">cerrar sesión</a>
+    </div>
 </div>
 <div class="caja ">
-    
+
 
     <div class="caja-uno centrado mt ">
 
