--- a/public/styles.css
+++ b/public/styles.css
@@ -27,15 +27,15 @@ body {
 }
 
 .header {
-    background: rgb(146, 191, 230);
-    background: linear-gradient(171deg, rgba(146, 191, 230, 0.7401085434173669) 13%, rgba(71, 112, 192, 0.7989320728291316) 57%, rgba(71, 139, 196, 0.7793242296918768) 97%);
+    /* background: rgb(146, 191, 230);
+    background: linear-gradient(171deg, rgba(146, 191, 230, 0.7401085434173669) 13%, rgba(71, 112, 192, 0.7989320728291316) 57%, rgba(71, 139, 196, 0.7793242296918768) 97%); */
     display: flex;
     flex-direction: row;
     vertical-align: middle;
     justify-content: space-between;
     align-items: center;
     padding: 2%;
-
+    background-color: rgba(71, 112, 192, 0.7989320728291316);
 }
 
 
