--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -1,11 +1,11 @@
 <div class="contenedorPadre">
     <div class="botonera">
-        <button class="boton-sec"><a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Jugar otra vez</a></button>
-        <button class="boton-sec"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ranking</a></button>
-        <button class="boton-sec"><a href="./index.php?controller=Animalia&method=mostrarPantallaInicial">Cerrar Sesión</a></button>
+        <button class="boton-sec ranking"><a href="./index.php?controller=Partida&method=mostrarPantallaPartida">Jugar otra vez</a></button>
+        <button class="boton-sec ranking"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">Ranking</a></button>
+        <button class="boton-sec ranking"><a href="./index.php?controller=Animalia&method=mostrarPantallaInicial">Cerrar Sesión</a></button>
     </div>
     <div class="perfil">
-        <h1>Perfil</h1>
+        <h1 class="centrado nombre titulo">Perfil</h1>
     
          {{#usuario}}
         <h1>Usuario: {{user_name}}</h1>
