--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -9,8 +9,7 @@
 
     <div class="caja-uno centrado mt ">
 
-        <h1>WELCOME</h1>
-        <h2>{{user}}</h2>
+        <h1>¡Bienvenido, {{user}}!</h1>
         <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
 
 
@@ -19,7 +18,9 @@
     <div class="caja-dos centrado ">
         <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton">Nueva partida</a>
 
-        <button class="ranking"><a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">
-                Ranking</a></button>
+        <button class="boton">
+            <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">
+                Ver ranking</a>
+        </button>
     </div>
 </div>
