modifique los botones del lobby

--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -1,4 +1,4 @@
-<div class ="contenedor_cerrar_sesion">
+<div class="contenedor_cerrar_sesion">
     <div class="caja bye centrado">
         <p class="m mt">¿Te vas pibe?</p>
         <a href="./index.php?controller=Lobby&method=cerrarSesion" class="boton m">cerrar sesión</a>
@@ -18,9 +18,11 @@
     <div class="caja-dos centrado ">
         <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton">Nueva partida</a>
 
-        <button class="boton">
+        <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking" class="boton">Ver ranking</a>
+
+        <!-- <button class="boton">
             <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">
                 Ver ranking</a>
-        </button>
+        </button> -->
     </div>
 </div>
