--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -16,9 +16,9 @@
     </div>
 
     <div class="caja-dos centrado ">
-        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton">Nueva partida</a>
+        <a href="./index.php?controller=Partida&method=mostrarPantallaPartida" class="boton boton-nueva-partida">Nueva partida</a>
 
-        <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking" class="boton">Ver ranking</a>
+        <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking" class="boton boton-ver-ranking">Ver ranking</a>
 
         <!-- <button class="boton">
             <a href="./index.php?controller=Ranking&method=mostrarPantallaRanking">
