--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -1,7 +1,7 @@
 <div class="contenedorPapa">
     <div class="formulario">
         <h3>¿Todavía out? Empeza a jugar</h3>
-        <form method="post" action="./index.php?controller=Animalia&method=procesarFormulario">
+        <form method="post" action="./index.php?controller=Animalia&method=procesarFormulario" enctype="multipart/form-data">
 
             <input type="text" placeholder="Nombre completo" class="input" autofocus required name="nombre">
             <input type="text" placeholder="Nombre de usuario" class="input" required name="username">
