--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -8,11 +8,12 @@
         <h1 class="centrado nombre titulo">Perfil</h1>
     
          {{#usuario}}
-        <h1>Usuario: {{user_name}}</h1>
-        <h2>Nombre: {{nombre_completo}}</h2>
-        <h3>Fecha de nacimiento: {{anio_de_nacimiento}}</h3>
-        <p>Mail: {{mail}}</p>
-        <img src="#" alt="">
+            <img src="{{foto_de_perfil}}" alt="">
+            <h1>Usuario: {{user_name}}</h1>
+            <h2>Nombre: {{nombre_completo}}</h2>
+            <h3>Fecha de nacimiento: {{anio_de_nacimiento}}</h3>
+            <p>Mail: {{mail}}</p>
+            <img src="#" alt="">
          {{/usuario}} 
     </div>
    
