boton de perfil on

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -14,7 +14,7 @@
     <a href="#"><img src="public/hornerito-panz-lirt.svg" class="logo"></a>
     <h1 class="nombre">Argentinazo: Hornero Editions</h1>
     <!-- ♠<svg></svg> -->
-    <a href="#"><img src="public/user.svg" class="account"></a>
+    <a href="./index.php?controller=Perfil&method=mostrarPantallaPerfil"><img src="public/user.svg" class="account"></a>
     
 
     
