Boton ir home on

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -11,7 +11,7 @@
 
 <header class="header">
 
-    <a href="#"><img src="public/hornerito-panz-lirt.svg" class="logo"></a>
+    <a href="./index.php?controller=Lobby&method=mostrarPantallaLobby"><img src="public/hornerito-panz-lirt.svg" class="logo"></a>
     <h1 class="nombre">Argentinazo: Hornero Editions</h1>
     <!-- ♠<svg></svg> -->
     <a href="./index.php?controller=Perfil&method=mostrarPantallaPerfil"><img src="public/user.svg" class="account"></a>
