--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -4,7 +4,8 @@
         
         
         <h1>{{tipo}}</h1>
-        <h2>⏳ Tiempo: </h2>
+        <h2>⏳ Tiempo: <span id="tiempoRestante">60</span> segundos</h2>
+        <div id="barraTiempo"></div>
         <img src="{{imagen}}" width="200" height="150" alt="">
         <h1>{{descripcion}}</h1>
         {{/pregunta}}
