--- a/view/lobbyView.mustache
+++ b/view/lobbyView.mustache
@@ -6,9 +6,14 @@
 </div>
 <div class="caja ">
 
+   
 
+    
+    
+    
     <div class="caja-uno centrado mt ">
-
+        
+        <img src="public/hornerito-panzon-color.svg" alt="hornerito" id="hornerito">
         <h1>¡Bienvenido, {{user}}!</h1>
         <p>PUNTAJE ALCANZADO : <span>{{puntaje}}</span> </p>
 
