--- a/view/indexView.mustache
+++ b/view/indexView.mustache
@@ -1,4 +1,4 @@
-<div class="contenedorPapa">
+<div class="contenedorPapa index">
     <div class="formulario">
         <h3>¿Todavía out? Empeza a jugar</h3>
         <form method="post" action="./index.php?controller=Animalia&method=procesarFormulario" enctype="multipart/form-data">
