fondos partida e index

--- a/view/jugarPartidaView.mustache
+++ b/view/jugarPartidaView.mustache
@@ -1,3 +1,4 @@
+<div class=" partida">
 {{#pregunta}}
 <div class="cardPartida {{tipo}}">
     <div class="caja">
@@ -27,4 +28,5 @@
         <button>💫</button>
         <button>🃏</button>
     </div>
+</div>
 </div>
