--- a/public/styles.css
+++ b/public/styles.css
@@ -80,9 +80,16 @@ body {
     margin: 2%;
 }
 .index{
-    background-image: url(../public/fondo-arg.png);
+    background-image: url(../public/fondo-arg-index.png);
     background-repeat: no-repeat;
+    background-size: contain;
+}
+.partida{
+    background-image: url(../public/fondo-arg-partida.png);
+    background-repeat: no-repeat;
+    padding: 5%;
     background-size: cover;
+    background-position: center center;
 }
 .inline {
     display: inline;
@@ -234,7 +241,7 @@ select {
 
 .boton_respuesta {
 
-    background: linear-gradient(164deg, rgba(99, 186, 228, 0.7120973389355743) 13%, rgba(131, 188, 215, 0.6644782913165266) 57%, rgba(175, 220, 242, 0.6336659663865547) 97%);
+    background: linear-gradient(164deg, rgba(99, 185, 228, 0.92) 13%, rgba(131, 188, 215, 0.92) 57%, rgba(175, 220, 242, 0.893) 97%);
     width: 35%;
     color: white;
     border: none;
