--- a/view/perfilView.mustache
+++ b/view/perfilView.mustache
@@ -5,7 +5,7 @@
         <button class="boton-sec ranking"><a href="./index.php?controller=Animalia&method=mostrarPantallaInicial">Cerrar Sesión</a></button>
     </div>
     <div class="perfil">
-        <h1 class="centrado nombre titulo">Perfil</h1>
+        <h1 class="centrado nombre ">Perfil</h1>
     
          {{#usuario}}
             <img src="{{foto_de_perfil}}" alt="">
